Fix jump on resize

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -312,7 +312,7 @@
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
   .aboutText {
     width: auto;
   }
